--- a/oasp4j-configuration/pom.xml
+++ b/oasp4j-configuration/pom.xml
@@ -4,8 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.oasp.java</groupId>
-    <artifactId>oasp4j</artifactId>
+    <artifactId>oasp4j-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../oasp4j-parent/pom.xml</relativePath>
   </parent>
   <artifactId>oasp4j-configuration</artifactId>
   <version>1.0.0-SNAPSHOT</version>
