--- a/oasp4j-monitoring/pom.xml
+++ b/oasp4j-monitoring/pom.xml
@@ -4,8 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.oasp.java</groupId>
-    <artifactId>oasp4j</artifactId>
+    <artifactId>oasp4j-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../oasp4j-parent/pom.xml</relativePath>
   </parent>
   <artifactId>oasp4j-monitoring</artifactId>
   <version>1.0.0-SNAPSHOT</version>
@@ -13,13 +14,13 @@
   <description>Monitoring Module of the Open Application Standard Platform for Java (OASP4J).</description>
 
   <dependencies>
-    <!-- Benoetigt u.a. fuer JMX -->
+    <!-- For JMX support -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
     </dependency>
 
-    <!-- Benoetigt fuer AOP -->
+    <!-- For Aspect Oriented Programming -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
