--- a/oasp4j-rest/pom.xml
+++ b/oasp4j-rest/pom.xml
@@ -4,8 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.oasp.java</groupId>
-    <artifactId>oasp4j</artifactId>
+    <artifactId>oasp4j-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../oasp4j-parent/pom.xml</relativePath>
   </parent>
   <artifactId>oasp4j-rest</artifactId>
   <version>1.0.0-SNAPSHOT</version>
@@ -16,12 +17,10 @@
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
       <artifactId>jackson-jaxrs-json-provider</artifactId>
-      <version>2.4.2</version>
     </dependency>
     <dependency>
       <groupId>javax.ws.rs</groupId>
       <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -30,31 +29,21 @@
     <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
-      <version>1</version>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
       <artifactId>validation-api</artifactId>
-      <version>1.1.0.Final</version>
     </dependency>
     <dependency>
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-util-core</artifactId>
-      <version>5.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
       <scope>test</scope>
     </dependency>
-    <!--
-      <dependency>
-      <groupId>org.apache.cxf</groupId>
-      <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-      <version>${cxf.version}</version>
-      <scope>test</scope>
-      </dependency>
-    -->
+    <!-- For testing we need a JAX-RS implementation to create a Response instance. Works easiest with RI. -->
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-common</artifactId>
