--- a/pom.xml
+++ b/pom.xml
@@ -8,390 +8,165 @@
     <version>1.1.0.RELEASE</version>
   </parent>
   <groupId>org.oasp.java</groupId>
-  <artifactId>oasp4j</artifactId>
+  <artifactId>oasp4j-dependencies</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
-  <description>Modules of the Open Application Standard Platform for Java (OASP4J).</description>
+  <description>Dependencies of the Open Application Standard Platform for Java (OASP4J) based on spring boot.</description>
   <url>http://oasp.org/</url>
   <inceptionYear>2014</inceptionYear>
 
-  <modules>
-    <module>oasp4j-logging</module>
-    <module>oasp4j-monitoring</module>
-    <module>oasp4j-configuration</module>
-    <module>oasp4j-beanmapping</module>
-    <module>oasp4j-security</module>
-    <module>oasp4j-rest</module>
-  </modules>
-
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <cxf.version>3.0.0</cxf.version>
   </properties>
+  
+  <modules>
+    <module>oasp4j-parent</module>
+  </modules>
 
   <dependencyManagement>
     <dependencies>
+      <!-- *** EXTERNAL DEPENDENCIES *** -->
+      <!-- spring-context is missing in spring-boot -->
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
         <version>${spring.version}</version>
       </dependency>
+      <!-- JSR 250 for component/bean lifecycle management -->
       <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>jsr250-api</artifactId>
         <version>1.0</version>
       </dependency>
+      <!-- JSR 330 for dependency injection -->
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>1</version>
+      </dependency>
+      <!-- Library with general utilities -->
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>13.0.1</version>
+        <version>17.0</version>
       </dependency>
+      <!-- Library with general utilities as well as I18N and exception support -->
+      <dependency>
+        <groupId>net.sf.m-m-m</groupId>
+        <artifactId>mmm-util-core</artifactId>
+        <version>5.0.0</version>
+      </dependency>
+      <!-- Support for money datatype including operations/calculations -->
       <dependency>
         <groupId>org.javamoney</groupId>
         <artifactId>moneta</artifactId>
         <version>0.8</version>
       </dependency>
+      <!-- DataBase Connection Pooling -->
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-dbcp2</artifactId>
         <version>2.0.1</version>
       </dependency>
+      <!-- Logging API -->
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.7.7</version>
       </dependency>
+      <!-- Servlet API -->
       <dependency>
-        <groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-jaxrs</artifactId>
-        <version>1.9.9</version>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+        <!-- <scope>provided</scope> -->
       </dependency>
+      <!-- Servlet Taglib -->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+      </dependency>
+      <!-- JAX-RS API for REST services-->
+      <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>2.0</version>
+      </dependency>
+      <!-- Jackson for JSON mapping -->
+      <dependency>
+        <groupId>com.fasterxml.jackson.jaxrs</groupId>
+        <artifactId>jackson-jaxrs-json-provider</artifactId>
+        <version>2.4.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.3.3</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.3.3</version>
+      </dependency>
+      <!-- Dozer for bean-mapping/conversion -->
+      <dependency>
+        <groupId>net.sf.dozer</groupId>
+        <artifactId>dozer</artifactId>
+        <version>5.5.1</version>
+      </dependency>
+      <!-- JSR303 API for annotation based validation -->
+      <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>1.1.0.Final</version>
+      </dependency>
+      <!-- Mocking framework for mocks in unit tests -->
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>1.9.5</version>
+      </dependency>
+      
+      <!-- *** INTERNAL DEPENDENCIES *** -->
+      <dependency>
+        <groupId>org.oasp.java</groupId>
+        <artifactId>oasp4j-monitoring</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.oasp.java</groupId>
+        <artifactId>oasp4j-logging</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.oasp.java</groupId>
+        <artifactId>oasp4j-beanmapping</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.oasp.java</groupId>
+        <artifactId>oasp4j-configuration</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.oasp.java</groupId>
+        <artifactId>oasp4j-security</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.oasp.java</groupId>
+        <artifactId>oasp4j-rest</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+      </dependency>      
     </dependencies>
   </dependencyManagement>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <configuration>
-          <encoding>${project.build.sourceEncoding}</encoding>
-          <includeEmptyDirs>true</includeEmptyDirs>
-        </configuration>
-      </plugin>
-
-      <!-- http://mojo.codehaus.org/flatten-maven-plugin/ -->
-      <!--
-        <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>flatten-maven-plugin</artifactId>
-        <version>1.0.0-beta-2</version>
-        <configuration>
-        <flattenMode>oss</flattenMode>
-        </configuration>
-        <executions>
-        <execution>
-        <id>flatten</id>
-        <phase>process-test-resources</phase>
-        <goals>
-        <goal>flatten</goal>
-        </goals>
-        </execution>
-        <execution>
-        <id>flatten.clean</id>
-        <phase>clean</phase>
-        <goals>
-        <goal>clean</goal>
-        </goals>
-        </execution>
-        </executions>
-        </plugin>
-      -->
-      <!-- configure java compiler -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <encoding>${project.build.sourceEncoding}</encoding>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-
-      <!-- advanced manifests -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-
-      <!-- also generate source JARs -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>attach-sources</id>
-            <phase>package</phase>
-            <goals>
-              <goal>jar-no-fork</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <!-- avoid version in local war files, exclude sources JARs from WARs -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <packagingExcludes>WEB-INF/lib/*-sources.jar</packagingExcludes>
-          <warName>${project.artifactId}</warName>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <!-- Surefire changed the default to the project.build.directory causing trouble with file paths to test resources -->
-          <workingDirectory>${basedir}</workingDirectory>
-        </configuration>
-      </plugin>
-
-      <!-- JaCoCo for test coverage -->
-      <!--
-        <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <executions>
-        <execution>
-        <id>default-prepare-agent</id>
-        <phase>pre-site</phase>
-        <goals>
-        <goal>prepare-agent</goal>
-        </goals>
-        </execution>
-        <execution>
-        <id>default-report</id>
-        <phase>prepare-package</phase>
-        <goals>
-        <goal>report</goal>
-        </goals>
-        </execution>
-        </executions>
-        </plugin>
-      -->
-
-      <!-- site generation settings -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-site-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
-  <reporting>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jxr-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <!--<notree>true</notree> -->
-          <show>protected</show>
-          <encoding>${project.reporting.outputEncoding}</encoding>
-          <charset>${project.build.sourceEncoding}</charset>
-          <docfilessubdirs>true</docfilessubdirs>
-          <links>
-            <link>http://docs.oracle.com/javase/7/docs/api/</link>
-          </links>
-          <doctitle>JavaDocs for ${project.name} ${project.version}</doctitle>
-          <windowtitle>JavaDocs for ${project.name} ${project.version}</windowtitle>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>taglist-maven-plugin</artifactId>
-        <configuration>
-          <tags>
-            <tag>TODO</tag>
-            <tag>@todo</tag>
-            <tag>FIXME</tag>
-            <tag>@deprecated</tag>
-          </tags>
-        </configuration>
-      </plugin>
-      <!--
-        <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-changelog-plugin</artifactId>
-        </plugin>
-      -->
-      <!--
-        <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-changes-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-        <xmlPath>${basedir}/src/site/changes.xml</xmlPath>
-        <issueLinkTemplate>%URL%/%ISSUE%</issueLinkTemplate>
-        <issueLinkTemplatePerSystem>
-        <github>%URL%/%ISSUE%</github>
-        </issueLinkTemplatePerSystem>
-        <escapeHTML>false</escapeHTML>
-        </configuration>
-        <reportSets>
-        <reportSet>
-        <reports>
-        <report>changes-report</report>
-        </reports>
-        </reportSet>
-        </reportSets>
-        </plugin>
-      -->
-    </plugins>
-  </reporting>
-
-  <profiles>
-    <profile>
-      <id>deploy</id>
-      <build>
-        <plugins>
-          <!-- also generate javadoc JARs -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-javadocs</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <!-- Sign artifacts with PGP -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-gpg-plugin</artifactId>
-            <configuration>
-              <!--<keyname>todo</keyname> -->
-            </configuration>
-            <executions>
-              <execution>
-                <id>sign-artifacts</id>
-                <phase>verify</phase>
-                <goals>
-                  <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <!-- separate eclipse build from command-line... -->
-      <id>eclipse</id>
-      <activation>
-        <property>
-          <name>eclipse.application</name>
-        </property>
-      </activation>
-      <build>
-        <directory>eclipse-target</directory>
-      </build>
-    </profile>
-  </profiles>
-  <issueManagement>
-    <system>GitHub</system>
-    <url>http://github.com/oasp/oasp-java/issues</url>
-  </issueManagement>
-  <scm>
-    <connection>scm:git:git@github.com:oasp/oasp-java.git</connection>
-    <developerConnection>scm:git:git@github.com:oasp/oasp-java.git</developerConnection>
-    <url>https://github.com/oasp/oasp-java/tree/master</url>
-    <tag/>
-  </scm>
-  <distributionManagement>
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <name>Staging Repository</name>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Snapshot Repository</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-    </snapshotRepository>
-    <site>
-      <id>oasp.org</id>
-      <url>${java.io.tmpdir}/oasp-site</url>
-    </site>
-  </distributionManagement>
-  <!--
-    <mailingLists>
-    <mailingList>
-    <name>oasp-devel</name>
-    <subscribe>TODO</subscribe>
-    <unsubscribe>TODO</unsubscribe>
-    <post>TODO</post>
-    <archive>TODO</archive>
-    </mailingList>
-    </mailingLists>
-  -->
   <organization>
     <name>OASP-Team</name>
     <url>http://oasp.org/team-list.html</url>
   </organization>
-  <developers>
-    <developer>
-      <id>hohwille</id>
-      <name>J&#246;rg Hohwiller</name>
-      <email>hohwille@users.sourceforge.net</email>
-      <organization></organization>
-      <organizationUrl/>
-      <roles>
-        <role>admin</role>
-        <role>designer</role>
-        <role>developer</role>
-      </roles>
-      <timezone>+1</timezone>
-      <properties/>
-    </developer>
-  </developers>
   <licenses>
     <license>
       <name>Apache Software Licenese</name>
