--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -252,7 +252,7 @@
       <artifactId>querydsl-jpa</artifactId>
       <version>3.7.1</version>
     </dependency>
-	
+
     <dependency>
       <groupId>org.skyscreamer</groupId>
       <artifactId>jsonassert</artifactId>
@@ -267,7 +267,16 @@
         <artifactId>ojdbc6</artifactId>
         <version>11.2.0</version>
       </dependency>
-     -->
+    -->
+
+	<!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
+    <!--
+      <dependency>
+        <groupId>org.mariadb.jdbc</groupId>
+        <artifactId>mariadb-java-client</artifactId>
+        <version>1.5.4</version>
+      </dependency>
+    -->
   </dependencies>
 
   <build>
