--- a/samples/core/src/main/resources/config/application.properties
+++ b/samples/core/src/main/resources/config/application.properties
@@ -23,3 +23,5 @@ spring.profiles.active=h2mem
 #UnComment the following profile 'orcl' if the database used is Oracle 11g
 #spring.profiles.active=orcl
 
+#UnComment the following profile 'mysql' if the database used is MariaDB 10.0.27
+#spring.profiles.active=mysql
