--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -6,6 +6,9 @@ spring.profiles.active=junit
 #UnComment the following line in the case of Oracle 11g database
 #spring.profiles.active=junit,orcl
 
+#UnComment the following line in the case of Oracle 11g database
+#spring.profiles.active=junit,mysql
+
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
 flyway.clean-on-validation-error=true
@@ -24,4 +27,3 @@ server.rest.test.user=waiter
 server.rest.test.password=waiter
 server.rest.test.flyway.baseline=0000
 server.rest.test.flyway.migration=0002
-#flyway.baseline-on-migrate=true
