--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -267,8 +267,17 @@
         <artifactId>ojdbc6</artifactId>
         <version>11.2.0</version>
       </dependency>
-    -->
+     -->
 
+	<!-- Comment the following dependency if the database that is used is not PostGres 9.5.4 -->
+    <!--
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4.1211.jre7</version>
+    </dependency>
+    -->
+	
 	<!-- Uncomment the following dependency if the database used is MariaDB 10.0.27 -->
     <!--
       <dependency>
