--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -6,8 +6,8 @@ spring.profiles.active=junit
 #UnComment the following line in the case of Oracle 11g database
 #spring.profiles.active=junit,orcl
 
-#UnComment the following line in the case of MariaDB 10.0.27 database
-#spring.profiles.active=junit,mysql
+#UnComment the following line in the case of PostGres 9.5.4 database
+#spring.profiles.active=junit,postgres
 
 # Flyway for Database Setup and Migrations
 flyway.enabled=true
@@ -29,5 +29,5 @@ server.rest.test.flyway.baseline=0000
 server.rest.test.flyway.migration=0002
 #flyway.baseline-on-migrate=true
 
-#UnComment the following line in the case of PostGres 9.5.4 database
-#spring.profiles.active=junit,postgres
+#UnComment the following profile 'mysql' if the database used is MariaDB 10.0.27
+#spring.profiles.active=mysql
