--- a/samples/core/pom.xml
+++ b/samples/core/pom.xml
@@ -51,6 +51,11 @@
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-csv</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-jpa-envers</artifactId>
     </dependency>
 
@@ -173,6 +178,11 @@
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
       <artifactId>jackson-jaxrs-json-provider</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-csv</artifactId>
     </dependency>
 
     <!-- Web Sockets -->
