--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <java.version>1.7</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <oasp4j.version>2.5.0</oasp4j.version>
+    <oasp4j.version>3.0.0-SNAPSHOT</oasp4j.version>
     <port.range>81</port.range>
     <oasp.flatten.mode>oss</oasp.flatten.mode>
     <spring.boot.version>1.5.3.RELEASE</spring.boot.version>
