--- a/boms/minimal/pom.xml
+++ b/boms/minimal/pom.xml
@@ -112,6 +112,21 @@
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-jpa-basic</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-jpa-spring-data</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-jpa-dao</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-jpa-envers</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -149,6 +164,11 @@
       <dependency>
         <groupId>io.oasp.java.starters</groupId>
         <artifactId>oasp4j-starter-cxf-server-ws</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.starters</groupId>
+        <artifactId>oasp4j-starter-spring-data-jpa</artifactId>
         <version>${project.version}</version>
       </dependency>
     </dependencies>
