--- a/templates/server/src/main/resources/archetype-resources/core/pom.xml
+++ b/templates/server/src/main/resources/archetype-resources/core/pom.xml
@@ -19,34 +19,52 @@
       <version>${project.version}</version>
     </dependency>
 
+    <!-- Bean-Mapping for conversion from TO to Entity and vice versa -->
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-beanmapping</artifactId>
     </dependency>
 
+    <!-- Security for authorization integration with spring-security -->
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-security</artifactId>
     </dependency>
 
     <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-web</artifactId>
+    </dependency>
+
+    <!-- Only required if you want to call external REST services within your Java application -->
+    <dependency>
       <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-client-rest</artifactId>
     </dependency>
+    <!-- Only required if you want to call external SOAP services within your Java application -->
     <dependency>
       <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-client-ws</artifactId>
     </dependency>
 
+    <!-- Only required if you want to provide REST services within your Java application -->
     <dependency>
       <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-server-rest</artifactId>
     </dependency>
+    <!-- Only required if you want to provide SOAP services within your Java application -->
     <dependency>
       <groupId>io.oasp.java.starters</groupId>
       <artifactId>oasp4j-starter-cxf-server-ws</artifactId>
     </dependency>
 
+    <!-- Only required if you want to use spring-data to access DB via JPA -->
+    <dependency>
+      <groupId>io.oasp.java.starters</groupId>
+      <artifactId>oasp4j-starter-spring-data-jpa</artifactId>
+    </dependency>
+    
+    <!-- Envers for historization/journalling of entities -->
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-jpa-envers</artifactId>
@@ -58,59 +76,56 @@
       https://github.com/oasp/oasp4j/issues/613
       -->
     <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-jdbc</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>io.oasp.java.modules</groupId>
-      <artifactId>oasp4j-jpa-dao</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>io.oasp.java.modules</groupId>
-      <artifactId>oasp4j-web</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-aop</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
     </dependency>
 
-    <!-- for SpringDispatcher Servlet -->
+    <!-- JPA 2.1 API -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-    </dependency>
-
-    <!-- for HttpInvoker -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-web</artifactId>
-    </dependency>
-
-    <!-- for Object Relational Mapping (JPA/Hibernate) -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-orm</artifactId>
+      <groupId>org.hibernate.javax.persistence</groupId>
+      <artifactId>hibernate-jpa-2.1-api</artifactId>
     </dependency>
 
     <!-- Hibernate EntityManager for JPA (implementation) -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
+    </dependency>
+
+    <!-- QueryDSL JPA for dynamic queries in type-safe and SQL-injection-safe way -->
+    <dependency>
+      <groupId>com.querydsl</groupId>
+      <artifactId>querydsl-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.querydsl</groupId>
+      <artifactId>querydsl-apt</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- For Bean-Validation (JSR 303) -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
+    <!-- Servlet API is required for any JEE web-app -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <!-- Expression Language (EL) is reuqired for servlet related features -->
+    <dependency>
+      <groupId>javax.el</groupId>
+      <artifactId>javax.el-api</artifactId>
+    </dependency>
+
+    <!-- for SpringDispatcher Servlet -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
     </dependency>
 
     <!-- Database -->
@@ -156,23 +171,10 @@
     </dependency>
 #end
 
+    <!-- Flyway for DB Schema version management and migration -->
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
-    </dependency>
-
-    <!-- hibernate -->
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.1-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-validator</artifactId>
     </dependency>
 
     <!-- CXF for REST and Webservices -->
@@ -181,15 +183,22 @@
       <artifactId>cxf-rt-rs-service-description</artifactId>
     </dependency>
 
-    <!-- Web Sockets -->
+    <!-- Monitoring features for spring -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-websocket</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
 
+    <!-- Aspect Oriented Programming (AOP) for advanced spring features -->
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-messaging</artifactId>
+      <artifactId>spring-aop</artifactId>
+    </dependency>
+
+    <!-- CGLib is required for Spring AOP -->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
     </dependency>
 
     <!-- Tests -->
@@ -200,8 +209,9 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.el</groupId>
-      <artifactId>javax.el-api</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -209,30 +219,14 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <exclusions>
         <exclusion>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
         </exclusion>
         <exclusion>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-validation</artifactId>
         </exclusion>
       </exclusions>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.querydsl</groupId>
-      <artifactId>querydsl-apt</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>com.querydsl</groupId>
-      <artifactId>querydsl-jpa</artifactId>
     </dependency>
 
     <dependency>
