--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <oasp4j.version>3.0.0-SNAPSHOT</oasp4j.version>
+    <oasp4j.version>3.0.0-alpha.1</oasp4j.version>
     <oasp.flatten.mode>oss</oasp.flatten.mode>
     <spring.boot.version>2.0.4.RELEASE</spring.boot.version>
     <javadoc.option.doclint></javadoc.option.doclint>
