--- a/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
+++ b/templates/server/src/main/resources/archetype-resources/core/src/main/resources/application.properties
@@ -59,7 +59,7 @@ spring.batch.job.enabled=false
 
 # Flyway for Database Setup and Migrations
 #if ($dbType == 'mariadb')
-#spring.flyway.locations=classpath:db/migration,classpath:db/type/mysql
+spring.flyway.locations=classpath:db/migration,classpath:db/type/mysql
 #else
 spring.flyway.locations=classpath:db/migration,classpath:db/type/${dbType}
 #end
