--- a/modules/jpa/pom.xml
+++ b/modules/jpa/pom.xml
@@ -19,6 +19,18 @@
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-jpa-dao</artifactId>
     </dependency>
+    <dependency>
+     <groupId>io.oasp.java.modules</groupId>
+  <artifactId>oasp4j-jpa-envers</artifactId>
+      </dependency>
+   <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-envers</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+    <artifactId>spring-context</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
