--- a/boms/minimal/pom.xml
+++ b/boms/minimal/pom.xml
@@ -127,6 +127,11 @@
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-jpa-dao-envers</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-jpa-envers</artifactId>
         <version>${project.version}</version>
       </dependency>
