--- a/modules/jpa-dao-envers/pom.xml
+++ b/modules/jpa-dao-envers/pom.xml
@@ -8,7 +8,7 @@
     <version>dev-SNAPSHOT</version>
   </parent>
   <groupId>io.oasp.java.modules</groupId>
-  <artifactId>oasp4j-jpa-envers</artifactId>
+  <artifactId>oasp4j-jpa-dao-envers</artifactId>
   <version>${oasp4j.version}</version>
   <packaging>jar</packaging>
   <name>${project.artifactId}</name>
@@ -17,11 +17,11 @@
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>oasp4j-jpa</artifactId>
+      <artifactId>oasp4j-jpa-dao</artifactId>
     </dependency>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>oasp4j-jpa-dao-envers</artifactId>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-envers</artifactId>
     </dependency>
 
     <dependency>
