--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -30,6 +30,7 @@
     <module>jpa</module>
     <module>jpa-basic</module>
     <module>jpa-dao</module>
+    <module>jpa-dao-envers</module>
     <module>jpa-envers</module>
     <module>jpa-spring-data</module>
     <module>test-jpa</module>
